--- a/src/pages/main/index.module.css
+++ b/src/pages/main/index.module.css
@@ -47,10 +47,12 @@
 }
 
 .form_label {
+  display: block;
   margin-bottom: 8px;
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
+text-align: start;
 }
 
 .form_input {
