--- a/src/components/button/index.module.css
+++ b/src/components/button/index.module.css
@@ -1,20 +1,31 @@
-.btn_start{
-    width: 79px;
-    height: 44px;
-    background: #5558FA;
-    border: #5558FA;
-    border-radius: 4px;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.btn_start {
+  background: #5558fa;
+  border: #5558fa;
+  border-radius: 4px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 16px 12px;
+  transition: all 0.2s;
 }
 
-.btn_back{
-    width: 73px;
-height: 44px;
-border: 1.5px solid #5558FA;
-border-radius: 4px;
-color: #5558FA;
-background-color: #FFFFFF;
+.btn_start:hover {
+  transform: scale(1.02);
+  background-color: white;
+  color:#5558fa;
+  border: 1.5px solid #5558fa;
+
+}
+
+.btn_back {
+  padding: 16px 12px;
+  border: 1.5px solid #5558fa;
+  border-radius: 4px;
+  color: #5558fa;
+  background-color: #ffffff;
+}
+
+.btn_back:hover {
+  transform: scale(1.02);
 }
