--- a/src/components/form/index.module.css
+++ b/src/components/form/index.module.css
@@ -41,9 +41,12 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
-  color: rgba(0, 0, 0, 0.48);
+  color: black;
   padding: 12px;
   margin-bottom: 8px;
+}
+.form_input::placeholder {
+  color: rgba(0, 0, 0, 0.48);
 }
 
 .form_select {
@@ -57,6 +60,7 @@
 }
 
 .form_btn__place {
+  margin-top: 64px;
   width: 680px;
   display: flex;
   flex-direction: row;
@@ -69,13 +73,14 @@
   font-size: 14px;
   line-height: 20px;
   color: #333333;
+  text-align: center;
 }
 .form_input__checkbox {
   margin-right: 8px;
 }
 
-.form_about{
-    position: relative;
+.form_about {
+  position: relative;
 }
 
 .form_about__text {
@@ -86,16 +91,52 @@
   border-radius: 4px;
   padding: 12px;
   font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 20px;
-color: rgba(0, 0, 0, 0.48);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: rgba(0, 0, 0, 0.48);
 }
 
 .form_about__counter {
-    position: absolute;
-    bottom: 5px;
-    right: 5px;
-    color: rgba(0, 0, 0, 0.48);
-    font-size: 10px;
-  }
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+  color: rgba(0, 0, 0, 0.48);
+  font-size: 10px;
+}
+
+.btn_delete {
+  width: 20px;
+  height: 19px;
+  background-color: #ffffff;
+  background-image: url(../../assets/Delete.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  border: none;
+  margin-left: 16px;
+}
+
+.btn_back {
+  padding: 12px;
+  border: 1.5px solid #5558fa;
+  border-radius: 4px;
+  background-color: #ffffff;
+  color: #5558fa;
+  text-align: center;
+}
+
+.btn_back:hover {
+  transform: scale(1.02);
+}
+
+.form_group{
+  margin-top: 24px;
+  display:flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.form_checkbox{
+  display: flex;
+  flex-direction: row;
+}
