--- a/src/pages/step1/index.module.css
+++ b/src/pages/step1/index.module.css
@@ -5,5 +5,16 @@
   align-self: center;
 }
 
-.step {
-}
+
+@media (width: 320px) { 
+  .progress{
+    width: 295px;
+  }
+ }
+
+
+ @media (min-width: 321px) and (max-width: 767px)  {
+  .progress{
+    width: 310px;
+  }
+ }
